# zaytuna

./: CMakeLists.txt  README.md  package.xml  zay_cam.cpp  zay_cam.hpp  zay_clock.hpp  zay_front_cam.cpp  zay_front_cam.hpp  zay_headers.hpp  zay_item.cpp  zay_item.hpp  zay_item_inputs_form.ui  zay_model_vehicle.cpp  zay_model_vehicle.hpp  zay_obstacle_inputs_form.cpp  zay_obstacle_inputs_form.ui  zay_primary_win.cpp  zay_primary_win.hpp  zay_primary_win.ui  zay_scene_widg.cpp  zay_scene_widg.hpp  zay_shape_data.hpp  zay_shape_maker.hpp  zay_shape_maker.inl  zay_utility.cpp  zay_utility.hpp  zay_vertex.hpp  zay_win_mainliner.cpp  zay_win_mainliner.hpp  zay_win_mainliner.ui  zaytuna.cpp  zaytuna.pro
Shaders/: source0.vsh  source1.fsh  source1.vsh
msg/: Localization.msg  Pose.msg
primitives/: carton_box  fence_300x300_2H_1W  lap1_control_vertices.txt  lap2_control_vertices.txt  lap3  mini-lap  plane_300x300_1sub-div  wall_1  wall_2  zay_brick_wall_projection  zay_carton_box_projection  zay_fence-back_projection  zay_fence-front_projection  zay_fence-left_projection  zay_fence-right_projection  zay_lap1  zay_lap2  zay_lap3  zay_mini-lap_control_vertices  zay_road_Exemplar  zay_sphere  zay_stone_wall_projection  zaytuna_model  zaytuna_model-back_tires  zaytuna_model-single_tire  zaytuna_model_projection
programs/: source0.fsh  source1.vsh  source2.fsh  source2.vsh  source3.fsh  source3.vsh
resources/: cam_v-angle  gras  test  zaytuna-fragments
src/: zay_app.cpp  zay_app.hpp  zay_cam.cpp  zay_cam.hpp  zay_coll_tester.hpp  zay_commons.hpp  zay_headers.hpp  zay_item.cpp  zay_item.hpp  zay_item_inputs_form.cpp  zay_item_inputs_form.hpp  zay_item_inputs_form.ui  zay_model_vehicle.cpp  zay_model_vehicle.hpp  zay_obstacle_inputs_form.cpp  zay_obstacle_inputs_form.hpp  zay_obstacle_inputs_form.ui  zay_primary_win.cpp  zay_primary_win.hpp  zay_primary_win.ui  zay_scene_widg.cpp  zay_scene_widg.hpp  zay_shape_data.hpp  zay_shape_maker.hpp  zay_shape_maker.inl  zay_topics.hpp  zay_topics_def.hpp  zay_utilities.cpp  zay_utilities.hpp  zay_utility.cpp  zay_utility.hpp  zay_vertex.hpp  zaytuna.cpp
tex/: 1280px-Basmala  carton_box  coord_ref  fence_brick_1024x1024  lap2_exemplar  lap3_exemplar
tex/.mayaSwatches/: lap3_exemplar.jpg_hcm.swatch  lap3_exemplar.png_hcm.swatch
tex/skybox/: front  left
