<?xml version="1.0"?>
<package format="2">
  <name>zaytuna</name>
  <version>1.3.0</version>
  <description>Zaytuna Simulator, a lightweight 3D self-driving car simulator with ROS</description>
  <maintainer email="murrey@ymail.com">Abbas Mohammed Murrey 2019-21</maintainer>
  <license>GPLv3</license>
  <url type="Github Repository">https://github.com/ChevronOne/zaytuna</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <!-- <build_depend>image_transport</build_depend> -->
  <!-- <build_depend>cv_bridge</build_depend> -->

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <!-- <build_export_depend>image_transport</build_export_depend> -->
  <!-- <build_export_depend>cv_bridge</build_export_depend> -->

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <!-- <exec_depend>image_transport</exec_depend> -->
  <!-- <exec_depend>cv_bridge</exec_depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>





